--- a/assets/css/bootstrap-fonts.css
+++ b/assets/css/bootstrap-fonts.css
@@ -1,3 +1,8 @@
+/*!
+ * Bootstrap Icons (https://icons.getbootstrap.com/)
+ * Copyright 2019-2023 The Bootstrap Authors
+ * Licensed under MIT (https://github.com/twbs/icons/blob/main/LICENSE.md)
+ */
 @font-face {
   font-display: block;
   font-family: "bootstrap-icons";
@@ -1700,10 +1705,6 @@
 
 .bi-cloud-hail::before {
   content: "\f2a4";
-}
-
-.bi-cloud-haze-1::before {
-  content: "\f2a5";
 }
 
 .bi-cloud-haze-fill::before {
@@ -5686,10 +5687,6 @@
   content: "\f689";
 }
 
-.bi-envelope-check-1::before {
-  content: "\f68a";
-}
-
 .bi-envelope-check-fill::before {
   content: "\f68b";
 }
@@ -5698,20 +5695,12 @@
   content: "\f68c";
 }
 
-.bi-envelope-dash-1::before {
-  content: "\f68d";
-}
-
 .bi-envelope-dash-fill::before {
   content: "\f68e";
 }
 
 .bi-envelope-dash::before {
   content: "\f68f";
-}
-
-.bi-envelope-exclamation-1::before {
-  content: "\f690";
 }
 
 .bi-envelope-exclamation-fill::before {
@@ -5730,20 +5719,12 @@
   content: "\f694";
 }
 
-.bi-envelope-slash-1::before {
-  content: "\f695";
-}
-
 .bi-envelope-slash-fill::before {
   content: "\f696";
 }
 
 .bi-envelope-slash::before {
   content: "\f697";
-}
-
-.bi-envelope-x-1::before {
-  content: "\f698";
 }
 
 .bi-envelope-x-fill::before {
@@ -5780,14 +5761,6 @@
 
 .bi-meta::before {
   content: "\f6a1";
-}
-
-.bi-mortorboard-fill::before {
-  content: "\f6a2";
-}
-
-.bi-mortorboard::before {
-  content: "\f6a3";
 }
 
 .bi-nintendo-switch::before {
@@ -5862,10 +5835,6 @@
   content: "\f6b5";
 }
 
-.bi-send-exclamation-1::before {
-  content: "\f6b6";
-}
-
 .bi-send-exclamation-fill::before {
   content: "\f6b7";
 }
@@ -5908,10 +5877,6 @@
 
 .bi-steam::before {
   content: "\f6c1";
-}
-
-.bi-terminal-dash-1::before {
-  content: "\f6c2";
 }
 
 .bi-terminal-dash::before {
@@ -6030,10 +5995,6 @@
   content: "\f6df";
 }
 
-.bi-displayport-1::before {
-  content: "\f6e0";
-}
-
 .bi-displayport::before {
   content: "\f6e1";
 }
@@ -6080,14 +6041,6 @@
 
 .bi-router::before {
   content: "\f6ec";
-}
-
-.bi-ssd-fill::before {
-  content: "\f6ed";
-}
-
-.bi-ssd::before {
-  content: "\f6ee";
 }
 
 .bi-thunderbolt-fill::before {
@@ -6514,10 +6467,6 @@
   content: "\f758";
 }
 
-.bi-filetype-ppt-1::before {
-  content: "\f759";
-}
-
 .bi-filetype-ppt::before {
   content: "\f75a";
 }
@@ -6576,10 +6525,6 @@
 
 .bi-filetype-woff::before {
   content: "\f768";
-}
-
-.bi-filetype-xls-1::before {
-  content: "\f769";
 }
 
 .bi-filetype-xls::before {
@@ -6750,14 +6695,6 @@
   content: "\f793";
 }
 
-.bi-1-circle-1::before {
-  content: "\f794";
-}
-
-.bi-1-circle-fill-1::before {
-  content: "\f795";
-}
-
 .bi-1-circle-fill::before {
   content: "\f796";
 }
@@ -6772,14 +6709,6 @@
 
 .bi-1-square::before {
   content: "\f799";
-}
-
-.bi-2-circle-1::before {
-  content: "\f79a";
-}
-
-.bi-2-circle-fill-1::before {
-  content: "\f79b";
 }
 
 .bi-2-circle-fill::before {
@@ -6798,14 +6727,6 @@
   content: "\f79f";
 }
 
-.bi-3-circle-1::before {
-  content: "\f7a0";
-}
-
-.bi-3-circle-fill-1::before {
-  content: "\f7a1";
-}
-
 .bi-3-circle-fill::before {
   content: "\f7a2";
 }
@@ -6820,14 +6741,6 @@
 
 .bi-3-square::before {
   content: "\f7a5";
-}
-
-.bi-4-circle-1::before {
-  content: "\f7a6";
-}
-
-.bi-4-circle-fill-1::before {
-  content: "\f7a7";
 }
 
 .bi-4-circle-fill::before {
@@ -6846,14 +6759,6 @@
   content: "\f7ab";
 }
 
-.bi-5-circle-1::before {
-  content: "\f7ac";
-}
-
-.bi-5-circle-fill-1::before {
-  content: "\f7ad";
-}
-
 .bi-5-circle-fill::before {
   content: "\f7ae";
 }
@@ -6868,14 +6773,6 @@
 
 .bi-5-square::before {
   content: "\f7b1";
-}
-
-.bi-6-circle-1::before {
-  content: "\f7b2";
-}
-
-.bi-6-circle-fill-1::before {
-  content: "\f7b3";
 }
 
 .bi-6-circle-fill::before {
@@ -6894,14 +6791,6 @@
   content: "\f7b7";
 }
 
-.bi-7-circle-1::before {
-  content: "\f7b8";
-}
-
-.bi-7-circle-fill-1::before {
-  content: "\f7b9";
-}
-
 .bi-7-circle-fill::before {
   content: "\f7ba";
 }
@@ -6918,14 +6807,6 @@
   content: "\f7bd";
 }
 
-.bi-8-circle-1::before {
-  content: "\f7be";
-}
-
-.bi-8-circle-fill-1::before {
-  content: "\f7bf";
-}
-
 .bi-8-circle-fill::before {
   content: "\f7c0";
 }
@@ -6940,14 +6821,6 @@
 
 .bi-8-square::before {
   content: "\f7c3";
-}
-
-.bi-9-circle-1::before {
-  content: "\f7c4";
-}
-
-.bi-9-circle-fill-1::before {
-  content: "\f7c5";
 }
 
 .bi-9-circle-fill::before {
@@ -7022,14 +6895,6 @@
   content: "\f7d7";
 }
 
-.bi-c-circle-1::before {
-  content: "\f7d8";
-}
-
-.bi-c-circle-fill-1::before {
-  content: "\f7d9";
-}
-
 .bi-c-circle-fill::before {
   content: "\f7da";
 }
@@ -7068,14 +6933,6 @@
 
 .bi-cassette::before {
   content: "\f7e3";
-}
-
-.bi-cc-circle-1::before {
-  content: "\f7e4";
-}
-
-.bi-cc-circle-fill-1::before {
-  content: "\f7e5";
 }
 
 .bi-cc-circle-fill::before {
@@ -7150,14 +7007,6 @@
   content: "\f7f7";
 }
 
-.bi-h-circle-1::before {
-  content: "\f7f8";
-}
-
-.bi-h-circle-fill-1::before {
-  content: "\f7f9";
-}
-
 .bi-h-circle-fill::before {
   content: "\f7fa";
 }
@@ -7190,14 +7039,6 @@
   content: "\f801";
 }
 
-.bi-p-circle-1::before {
-  content: "\f802";
-}
-
-.bi-p-circle-fill-1::before {
-  content: "\f803";
-}
-
 .bi-p-circle-fill::before {
   content: "\f804";
 }
@@ -7228,14 +7069,6 @@
 
 .bi-prescription2::before {
   content: "\f80b";
-}
-
-.bi-r-circle-1::before {
-  content: "\f80c";
-}
-
-.bi-r-circle-fill-1::before {
-  content: "\f80d";
 }
 
 .bi-r-circle-fill::before {
